@@ -27,6 +27,14 @@
 
 #if USE(APPLE_INTERNAL_SDK)
 
+#if HAVE(CPP20_INCOMPATIBLE_INTERNAL_HEADERS)
+#define CGCOLORTAGGEDPOINTER_H_
+#ifndef GL_GLES_PROTOTYPES
+#define GL_GLES_PROTOTYPES 0
+#endif
+#include <ANGLE/entry_points_gles_ext_autogen.h>
+#endif
+
 #include <Carbon/CarbonPriv.h>
 
 #else
